--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -98,6 +98,5 @@ $search-box-border-color: #666 !default;
 // These settings are probably best left alone.
 
 %break-words {
-    word-break: break-all;
-    hyphens: auto;
+    word-break: break-word;
 }
